@@ -39,6 +39,7 @@ check_mysql, check_mysql_query:
 		Lib: libmysql, libmysqlclient
 		Redhat Powertools Source: mysql-3.20.32a-3.i386.rpm, mysql-devel-3.20.32a-3.i386.rpm (these seem to be broken, however)
 		RPMS from www.mysql.org work better
+	  Must have mysql_config in PATH
 
 check_pqsql:
 	- Requires the PostgreSQL libraries available from
