@@ -254,72 +254,19 @@ fi
 LIBS="$_SAVEDLIBS"
 
 dnl Check for mysql libraries
-_SAVEDLIBS="$LIBS"
-_SAVEDCPPFLAGS="$CPPFLAGS"
-FOUNDMYSQL="no"
-AC_ARG_WITH(mysql,
-	ACX_HELP_STRING([--with-mysql=DIR],
-		[sets path to mysql installation (assumes lib/lib64 and include subdirs)]),
-	MYSQL=$withval,)
-# Find the mysql client libs
-if test -n "$MYSQL"; then
-  MYSQLLIBDIR=$MYSQL/lib
-  MYSQLLIB64DIR=$MYSQL/lib64
-elif test -f /usr/lib/libmysqlclient.so -o -f /usr/lib/libmysqlclient.a ; then
-  MYSQL="/usr"
-  MYSQLLIBDIR=$MYSQL/lib
-  MYSQLLIB64DIR=$MYSQL/lib64
-elif test -f /usr/lib/mysql/libmysqlclient.so -o -f /usr/lib/mysql/libmysqlclient.a ; then
-  MYSQL="/usr"
-  MYSQLLIBDIR=$MYSQL/lib/mysql
-  MYSQLLIB64DIR=$MYSQL/lib64/mysql
-elif test -f /usr/local/lib/libmysqlclient.so -o -f /usr/local/lib/libmysqlclient.a ; then
-  MYSQL="/usr/local"
-  MYSQLLIBDIR=$MYSQL/lib
-  MYSQLLIB64DIR=$MYSQL/lib64
-elif test -f /usr/local/lib/mysql/libmysqlclient.so -o -f /usr/local/lib/mysql/libmysqlclient.a ; then
-  MYSQL="/usr/local"
-  MYSQLLIBDIR=$MYSQL/lib/mysql
-  MYSQLLIB64DIR=$MYSQL/lib64/mysql
-elif test -f /usr/local/mysql/lib/libmysqlclient.so -o -f /usr/local/mysql/lib/libmysqlclient.a ; then
-  MYSQL="/usr/local/mysql"
-  MYSQLLIBDIR=$MYSQL/lib
-  MYSQLLIB64DIR=$MYSQL/lib64
-fi
-
-# Check libs okay
-if test -n "$MYSQL" ; then
-  CPPFLAGS="-L$MYSQLLIBDIR -L$MYSQLLIB64DIR"
-  AC_CHECK_LIB(mysqlclient,mysql_init,MYSQLLIBS="-lmysqlclient -lz",,-lz)
-  AC_CHECK_LIB(mysqlclient,mysql_close,MYSQLLIBS="-lmysqlclient")
-fi
-
-# Check headers okay
-if test "$ac_cv_lib_mysqlclient_mysql_init" = "yes" -o "$ac_cv_lib_mysqlclient_mysql_close" = "yes"; then
-  CPPFLAGS="-I$MYSQL/include"
-  AC_CHECK_HEADERS(mysql.h errmsg.h, FOUNDMYSQL="yes" MYSQLINCLUDE="-I$MYSQL/include")
-  if test x"$FOUNDMYSQL" != x"yes" ; then
-	  AC_CHECK_HEADERS(mysql/mysql.h mysql/errmsg.h, FOUNDMYSQL="yes" MYSQLINCLUDE="-I$MYSQL/include/mysql")
-  fi
-fi
-
-# Setup mysql plugins
-if test $FOUNDMYSQL = "yes" ; then
-  EXTRAS="$EXTRAS check_mysql check_mysql_query"
-  if test -d $MYSQLLIB64DIR ; then
-    MYSQLLIBS="-L$MYSQLLIB64DIR -rpath $MYSQLLIB64DIR $MYSQLLIBS"
-  fi
-  if test -d $MYSQLLIBDIR ; then
-    MYSQLLIBS="-L$MYSQLLIBDIR -rpath $MYSQLLIBDIR $MYSQLLIBS"
-  fi
-  AC_SUBST(MYSQLINCLUDE)
-  AC_SUBST(MYSQLLIBS)
-else
+AC_PATH_PROG(MYSQLCONFIG, mysql_config)
+if test -z "$MYSQLCONFIG"; then
   AC_MSG_WARN([Skipping mysql plugin])
   AC_MSG_WARN([install mysql client libs to compile this plugin (see REQUIREMENTS).])
+else
+  EXTRAS="$EXTRAS check_mysql check_mysql_query"
+  MYSQLINCLUDE=`$MYSQLCONFIG --include`
+  MYSQLLIBS=`$MYSQLCONFIG --libs`
+  MYSQLCFLAGS=`$MYSQLCONFIG --cflags`
+  AC_SUBST(MYSQLINCLUDE)
+  AC_SUBST(MYSQLLIBS)
+  AC_SUBST(MYSQLCFLAGS)
 fi
-CPPFLAGS="$_SAVEDCPPFLAGS"
-LIBS="$_SAVEDLIBS"
 
 AC_CHECK_HEADERS(unistd.h)
 
