@@ -15,7 +15,7 @@ LIBS = @LIBINTL@
 
 test_utils_SOURCES = test_utils.c
 test_utils_CFLAGS = -g -I..
-test_utils_LDFLAGS = -rpath /usr/local/lib -ltap
+test_utils_LDFLAGS = -L/usr/local/lib -ltap
 test_utils_LDADD = ../utils.o
 
 test: ${noinst_PROGRAMS}
